--- a/collection.html
+++ b/collection.html
@@ -26,7 +26,7 @@
                     <p>
                         <a class="album-name" href="#">The Colors</a>
                         <br/>
-                        <a href="#">Pablo Picasso</a>
+                        <a class="collection-album-container caption" href="#">Pablo Picasso</a>
                         <br/>
                         X songs
                         <br/>
@@ -39,7 +39,7 @@
                     <p>
                         <a class="album-name" href="#">The Colors</a>
                         <br/>
-                        <a href="#">Pablo Picasso</a>
+                        <a class="collection-album-container caption" href="#">Pablo Picasso</a>
                         <br/>
                         X songs
                         <br/>
@@ -52,7 +52,7 @@
                     <p>
                         <a class="album-name" href="#">The Colors</a>
                         <br/>
-                        <a href="#">Pablo Picasso</a>
+                        <a class="collection-album-container caption" href="#">Pablo Picasso</a>
                         <br/>
                         X songs
                         <br/>
@@ -65,7 +65,7 @@
                     <p>
                         <a class="album-name" href="#">The Colors</a>
                         <br/>
-                        <a href="#">Pablo Picasso</a>
+                        <a class="collection-album-container caption" href="#">Pablo Picasso</a>
                         <br/>
                         X songs
                         <br/>
